--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -40,12 +40,13 @@ jobs:
           tags: |
             # SemVer tags when pushing annotated tags like v1.2.3 or v1.2.3-rc.1
             type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}},enable={{!is_prerelease}}
-            type=semver,pattern={{major}},enable={{!is_prerelease}}
+            # Only for stable (no '-') tags
+            type=semver,pattern={{major}}.{{minor}},enable=${{ startsWith(github.ref, 'refs/tags/') && !contains(github.ref_name, '-') }}
+            type=semver,pattern={{major}},enable=${{ startsWith(github.ref, 'refs/tags/') && !contains(github.ref_name, '-') }}
             # latest only for stable releases (no pre-release)
-            type=raw,value=latest,enable={{is_tag && !is_prerelease}}
+            type=raw,value=latest,enable=${{ startsWith(github.ref, 'refs/tags/') && !contains(github.ref_name, '-') }}
             # edge for default branch builds
-            type=raw,value=edge,enable={{is_default_branch}}
+            type=raw,value=edge,enable=${{ github.ref == 'refs/heads/main' }}
             # always include a short sha tag for traceability
             type=sha,format=short
           labels: |
