--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   db:
-    image: postgres:16
+    image: postgres:17.6
     environment:
       POSTGRES_DB: quran
       POSTGRES_USER: quran
@@ -8,38 +8,8 @@ services:
     volumes:
       - pgdata:/var/lib/postgresql/data
     restart: unless-stopped
-
-  minio:
-    image: minio/minio:latest
-    environment:
-      MINIO_ROOT_USER: minio
-      MINIO_ROOT_PASSWORD: minio12345
-    command: server /data --console-address ":9001"
-    ports:
-      - "9000:9000"
-      - "9001:9001"
-    volumes:
-      - minio:/data
-    restart: unless-stopped
-
-  createbucket:
-    image: minio/mc:latest
-    depends_on:
-      - minio
-    environment:
-      MINIO_ROOT_USER: minio
-      MINIO_ROOT_PASSWORD: minio12345
-      AWS_STORAGE_BUCKET_NAME: quran-media
-    entrypoint: ["/bin/sh","-c"]
-    command: >
-      mc alias set local http://minio:9000 $MINIO_ROOT_USER $MINIO_ROOT_PASSWORD &&
-      mc mb -p local/$AWS_STORAGE_BUCKET_NAME || true
-    restart: "no"
-
   web:
-    build: .
-    env_file:
-      - .env
+    image: smssexe/quran:v0.0.9
     environment:
       # App
       PORT: "8000"
@@ -53,11 +23,11 @@ services:
       POSTGRES_HOST: db
       POSTGRES_PORT: "5432"
       # Object storage via MinIO (S3-compatible)
-      AWS_STORAGE_BUCKET_NAME: quran-media
-      AWS_S3_REGION_NAME: us-east-1
-      AWS_S3_ENDPOINT_URL: http://minio:9000
-      AWS_ACCESS_KEY_ID: minio
-      AWS_SECRET_ACCESS_KEY: minio12345
+      # AWS_STORAGE_BUCKET_NAME: quran-media
+      # AWS_S3_REGION_NAME: us-east-1
+      # AWS_S3_ENDPOINT_URL: http://minio:9000
+      # AWS_ACCESS_KEY_ID: minio
+      # AWS_SECRET_ACCESS_KEY: minio12345
       # Optional CDN override left empty for local
       CDN_BASE_URL: ""
     ports:
@@ -66,10 +36,7 @@ services:
       - .:/app
     depends_on:
       - db
-      - minio
-      - createbucket
     restart: unless-stopped
 
 volumes:
   pgdata:
-  minio:
