--- a/.github/workflows/ci-release.yml
+++ b/.github/workflows/ci-release.yml
@@ -2,10 +2,10 @@ name: CI • Build • Release • DockerHub
 
 on:
   push:
-    branches: [ "main" ]
-    tags: [ "v*.*.*" ]
+    branches: ["nextjs"]
+    tags: ["v*.*.*"]
   pull_request:
-    branches: [ "main" ]
+    branches: ["nextjs"]
 
 env:
   IMAGE_NAME: ${{ secrets.DOCKERHUB_USERNAME }}/quran-audio-frontend
@@ -89,7 +89,7 @@ jobs:
   release:
     name: GitHub Release (on tag)
     runs-on: ubuntu-latest
-    needs: [ build, docker ]
+    needs: [build, docker]
     if: startsWith(github.ref, 'refs/tags/')
     steps:
       - name: Checkout
