--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "devDependencies": {
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.5",
-    "typescript": "5.5.4"
+    "typescript": "5.5.4",
+    "@types/react": "^18.2.73",
+    "@types/node": "^22.5.4"
   }
 }
