--- a/.github/workflows/ci-release.yml
+++ b/.github/workflows/ci-release.yml
@@ -2,10 +2,10 @@ name: CI • Build • Release • DockerHub
 
 on:
   push:
-    branches: ["nextjs"]
-    tags: ["v*.*.*"]
+    branches: [ "nextjs" ]
+    tags: [ "v*.*.*" ]
   pull_request:
-    branches: ["nextjs"]
+    branches: [ "nextjs" ]
 
 env:
   IMAGE_NAME: ${{ secrets.DOCKER_USERNAME }}/quran-audio-frontend
@@ -15,20 +15,24 @@ jobs:
     name: Build (Next.js)
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Use Node.js 20
-        uses: actions/setup-node@v4
+      - uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: 22
 
-      - name: Install deps (ci if lockfile exists, else install)
+      - name: Install deps
         run: |
           if [ -f package-lock.json ]; then
             npm ci --legacy-peer-deps
           else
             npm install --legacy-peer-deps
+          fi
+
+      - name: Ensure ESLint config (non-interactive)
+        run: |
+          if [ ! -f .eslintrc.json ] && [ ! -f .eslintrc.js ]; then
+            echo '{ "extends": ["next/core-web-vitals"] }' > .eslintrc.json
           fi
 
       - name: Lint
@@ -37,34 +41,18 @@ jobs:
       - name: Build
         run: npm run build
 
-      - name: Upload build artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: next-build
-          path: |
-            .next
-            package.json
-            next.config.js
-            public
-          if-no-files-found: ignore
-
   docker:
     name: Docker Build & Push
     needs: build
     runs-on: ubuntu-latest
     if: github.event_name == 'push'
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
+      - uses: docker/setup-qemu-action@v3
+      - uses: docker/setup-buildx-action@v3
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Log in to DockerHub
-        uses: docker/login-action@v3
+      - uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
@@ -81,8 +69,7 @@ jobs:
             type=semver,pattern={{major}}.{{minor}}
             type=sha
 
-      - name: Build and push
-        uses: docker/build-push-action@v6
+      - uses: docker/build-push-action@v6
         with:
           context: .
           push: true
@@ -93,13 +80,10 @@ jobs:
   release:
     name: GitHub Release (on tag)
     runs-on: ubuntu-latest
-    needs: [build, docker]
+    needs: [ build, docker ]
     if: startsWith(github.ref, 'refs/tags/')
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Create GitHub Release
-        uses: softprops/action-gh-release@v2
+      - uses: actions/checkout@v4
+      - uses: softprops/action-gh-release@v2
         with:
           generate_release_notes: true
