--- a/.github/workflows/ci-release.yml
+++ b/.github/workflows/ci-release.yml
@@ -2,13 +2,13 @@ name: CI • Build • Release • DockerHub
 
 on:
   push:
-    branches: [ "nextjs" ]
-    tags: [ "v*.*.*" ]
+    branches: ["nextjs"]
+    tags: ["v*.*.*"]
   pull_request:
-    branches: [ "nextjs" ]
+    branches: ["nextjs"]
 
 env:
-  IMAGE_NAME: ${{ secrets.DOCKER_USERNAME }}/quran-audio-frontend
+  IMAGE_NAME: ${{ secrets.DOCKER_USERNAME }}/quran
 
 jobs:
   build:
@@ -106,7 +106,7 @@ jobs:
   release:
     name: GitHub Release (on tag)
     runs-on: ubuntu-latest
-    needs: [ build, docker ]
+    needs: [build, docker]
     if: startsWith(github.ref, 'refs/tags/')
     steps:
       - uses: actions/checkout@v4
