--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,25 @@
 version: '3.9'
 services:
+  backend:
+    build:
+      context: .
+      dockerfile: backend/Dockerfile
+    container_name: quran-backend
+    ports:
+      - '8000:8000'
+    environment:
+      - DATABASE_URL=sqlite:///./app.db
+      - CORS_ORIGINS=http://localhost:3000
+      - JWT_SECRET=dev-secret-change-me
+    restart: unless-stopped
   web:
     build: .
+    container_name: quran-frontend
     ports:
-      - "3000:3000"
+      - '3000:3000'
+    environment:
+      - NODE_ENV=production
+      - NEXT_PUBLIC_API_BASE=http://localhost:8000
+    depends_on:
+      - backend
     restart: unless-stopped
