--- a/docker-compose.pull.yml
+++ b/docker-compose.pull.yml
@@ -2,30 +2,24 @@ version: '3.9'
 
 services:
   backend:
-    build:
-      context: ./backend
-      dockerfile: Dockerfile
-    image: quran-backend:latest
+    image: ${DOCKER_USERNAME}/quran-backend:${TAG:-latest}
     container_name: quran-backend
     ports:
       - "8000:8000"
     environment:
       - DATABASE_URL=sqlite:///./app.db
-      - CORS_ORIGINS=http://localhost:3000
-      - JWT_SECRET=dev-secret-change-me
+      - CORS_ORIGINS=${FRONTEND_ORIGIN:-http://localhost:3000}
+      - JWT_SECRET=${JWT_SECRET:-change-me}
     restart: unless-stopped
 
   frontend:
-    build:
-      context: ./frontend
-      dockerfile: Dockerfile
-    image: quran-frontend:latest
+    image: ${DOCKER_USERNAME}/quran-frontend:${TAG:-latest}
     container_name: quran-frontend
     ports:
       - "3000:3000"
     environment:
       - NODE_ENV=production
-      - NEXT_PUBLIC_API_BASE=http://localhost:8000
+      - NEXT_PUBLIC_API_BASE=${API_BASE:-http://localhost:8000}
     depends_on:
       - backend
     restart: unless-stopped
