--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,9 +1,19 @@
 FROM python:3.12-slim
+
 WORKDIR /app
-ENV PYTHONDONTWRITEBYTECODE=1 PYTHONUNBUFFERED=1
-COPY backend/requirements.txt ./requirements.txt
+ENV PYTHONDONTWRITEBYTECODE=1
+ENV PYTHONUNBUFFERED=1
+
+COPY requirements.txt ./requirements.txt
 RUN pip install --no-cache-dir -r requirements.txt
-COPY backend ./backend
-ENV HOST=0.0.0.0 PORT=8000 DATABASE_URL=sqlite:///./app.db CORS_ORIGINS=http://localhost:3000 JWT_SECRET=dev-secret-change-me
+
+COPY . .
+
+ENV HOST=0.0.0.0
+ENV PORT=8000
+ENV DATABASE_URL=sqlite:///./app.db
+ENV CORS_ORIGINS=http://localhost:3000
+ENV JWT_SECRET=dev-secret-change-me
+
 EXPOSE 8000
-CMD ["uvicorn","backend.app.main:app","--host","0.0.0.0","--port","8000"]
+CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
