Add backend health endpoint and update frontend API routing
Introduced a /health endpoint in the backend for service checks. Updated frontend API base to use a relative '/api' path and added Next.js rewrites to proxy API requests to the backend service. Improved error handling in login, fixed a surah name typo, and updated Docker and compose files for better environment variable management and CORS support.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,5 @@
+version: '3.9'
+
 services:
   backend:
     build:
@@ -9,7 +11,7 @@ services:
       - "8000:8000"
     environment:
       - DATABASE_URL=sqlite:///./app.db
-      - CORS_ORIGINS=http://localhost:3000
+      - CORS_ORIGINS=http://localhost:3000,http://127.0.0.1:3000
       - JWT_SECRET=dev-secret-change-me
     restart: unless-stopped
 
@@ -23,7 +25,6 @@ services:
       - "3000:3000"
     environment:
       - NODE_ENV=production
-      - NEXT_PUBLIC_API_BASE=http://localhost:8000
     depends_on:
       - backend
     restart: unless-stopped
