Remove hardcoded JWT secret from Docker configs
The JWT_SECRET is no longer baked into backend and docker-compose environment variables; it should be set at runtime for improved security. Also, added libc6-compat to frontend Dockerfile for compatibility, updated language code in layout.tsx, and bumped frontend version to 0.6.1.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,13 +12,12 @@ services:
     environment:
       - DATABASE_URL=sqlite:///./app.db
       - CORS_ORIGINS=http://localhost:3000,http://127.0.0.1:3000
-      - JWT_SECRET=dev-secret-change-me
+      # Set at runtime in prod: JWT_SECRET=your-strong-secret
     restart: unless-stopped
 
   frontend:
     build:
       context: ./frontend
-      dockerfile: Dockerfile
     image: quran-frontend:latest
     container_name: quran-frontend
     ports:
