--- a/.github/workflows/docker-multi.yml
+++ b/.github/workflows/docker-multi.yml
@@ -1,4 +1,4 @@
-name: Build & Push (Frontend + Backend) + Release + Telegram
+name: Build & Push (Frontend + Backend)
 
 on:
   push:
@@ -87,7 +87,7 @@ jobs:
           curl -s -X POST "https://api.telegram.org/bot${{ secrets.TELEGRAM_BOT_TOKEN }}/sendMessage"           -d chat_id="${{ secrets.TELEGRAM_CHAT_ID }}"           -d parse_mode="Markdown"           -d text="❌ *Build failed* — ${{ matrix.component }}\nRepo: ${{ github.repository }}\nRef: ${{ github.ref_name }}"
 
   release:
-    name: Create GitHub Release + Telegram
+    name: Create GitHub Release
     needs: build-and-push
     if: startsWith(github.ref, 'refs/tags/')
     runs-on: ubuntu-latest
