Update Docker tag configuration in workflow
Replaces the tag event configuration with a raw type for tags in the docker-multi GitHub Actions workflow. This change improves tag handling by using the ref_name for tag events.

--- a/.github/workflows/docker-multi.yml
+++ b/.github/workflows/docker-multi.yml
@@ -59,8 +59,8 @@ jobs:
         with:
           images: ${{ steps.img.outputs.IMAGE }}
           tags: |
+            type=raw,value=${{ github.ref_name }},enable=${{ startsWith(github.ref, 'refs/tags/') }}
             type=ref,event=branch
-            type=ref,event=tag
             type=sha,format=short
           flavor: |
             latest=true
