--- a/.github/workflows/docker-multi.yml
+++ b/.github/workflows/docker-multi.yml
@@ -61,9 +61,8 @@ jobs:
           images: ${{ steps.img.outputs.IMAGE }}
           tags: |
             type=raw,value=${{ github.ref_name }},enable=${{ startsWith(github.ref, 'refs/tags/') }}
-            type=ref,event=tag,enable=${{ startsWith(github.ref, 'refs/tags/') }}
             type=ref,event=branch,enable=${{ startsWith(github.ref, 'refs/heads/') }}
-            type=sha,format=short
+            type=sha,format=short,enable=${{ startsWith(github.ref, 'refs/heads/') }}
           flavor: |
             latest=true
 
