--- a/.github/workflows/docker-multi.yml
+++ b/.github/workflows/docker-multi.yml
@@ -61,8 +61,7 @@ jobs:
           images: ${{ steps.img.outputs.IMAGE }}
           tags: |
             type=raw,value=${{ github.ref_name }},enable=${{ startsWith(github.ref, 'refs/tags/') }}
-            type=ref,event=branch,enable=${{ startsWith(github.ref, 'refs/heads/') }}
-            type=sha,format=short,enable=${{ startsWith(github.ref, 'refs/heads/') }}
+            latest=true
           flavor: |
             latest=true
 
@@ -72,10 +71,8 @@ jobs:
           context: ${{ matrix.context }}
           file: ${{ matrix.dockerfile }}
           push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+          tags: |
+            ${{ steps.meta.outputs.tags }}
 
       - name: Telegram — success ${{ matrix.component }}
         if: ${{ success() && github.event_name != 'pull_request' }}
