Update Docker image tagging in workflow
Simplified the Docker image tags in the GitHub Actions workflow by removing the raw type and enabling direct use of ref_name and 'latest'. This improves clarity and consistency in image tagging.

--- a/.github/workflows/docker-multi.yml
+++ b/.github/workflows/docker-multi.yml
@@ -60,8 +60,8 @@ jobs:
         with:
           images: ${{ steps.img.outputs.IMAGE }}
           tags: |
-            type=raw,value=${{ github.ref_name }},enable=${{ startsWith(github.ref, 'refs/tags/') }}
-            latest=true
+            ${{ github.ref_name }}
+            latest
           flavor: |
             latest=true
 
